# x-slot-protocal-temp

./: CMakeLists.txt  core.h  readme.md
bacnet/: AnalogueInput.h  AnalogueOutput.h  DigitalInput.h  DigitalOutput.h  ai.h  ao.h  av.h  bi.h  bo.h  bv.h  type.h
demo/: CMakeLists.txt  demo_basic.cpp  demo_edge_node.cpp  demo_gateway.cpp  demo_hmi.cpp  demo_hub_node.cpp  hal_windows.c
doc/: TPMESH.md  架构与设计.md
include/: xslot.h  xslot_protocol.h
include/xslot/: xslot.h  xslot_error.h  xslot_hal.h  xslot_types.h
src/: xslot_c_api.cpp
src/bacnet/: bacnet_incremental.cpp  bacnet_incremental.h  bacnet_object_def.h  bacnet_serializer.cpp  bacnet_serializer.h  xslot_bacnet.cpp  xslot_bacnet.h  xslot_bacnet_incremental.cpp  xslot_bacnet_incremental.h
src/core/: buffer_utils.h  error.h  frame.cpp  frame.h  function_ref.h  manager.cpp  manager.h  message_builder.cpp  message_builder.h  message_codec.cpp  message_codec.h  node_table.cpp  node_table.h  result.h  unique_handle.h  xslot_manager.cpp  xslot_manager.h  xslot_protocol.cpp  xslot_protocol.h
src/hal/: hal_freertos.cpp  hal_interface.h  hal_linux.cpp  hal_windows.cpp  xslot_hal.h
src/transport/: direct_transport.cpp  direct_transport.h  i_transport.h  null_transport.cpp  null_transport.h  tpmesh_at_driver.cpp  tpmesh_at_driver.h  tpmesh_at_tansport.cpp  tpmesh_at_transport.h  tpmesh_transport.cpp  tpmesh_transport.h  transport.cpp  transport.h  xslot_at_transport.cpp  xslot_at_transport.h  xslot_transport.h
